--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             background-image: url("https://4kwallpapers.com/images/walls/thumbs_2t/9386.jpg");
             background-repeat: no-repeat;
             background-size: cover;
-            color: black;
+            color: white;
         }
         table {
             margin-bottom: 50px;
