--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
     <h4>
-        <img src=""/>
+        <img src="C:\Users\ACER\Downloads\wince.jpg"/>
     </h4>
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
