--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
     <h4>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fperpustakaan.uki.ac.id%2Flayanan-taman-baca-202206099&psig=AOvVaw3Wh-NG0L6K21tdaOET8-uV&ust=1726731091516000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMCkhuT-y4gDFQAAAAAdAAAAABAE"\>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fperpustakaan.uki.ac.id%2F&psig=AOvVaw3Wh-NG0L6K21tdaOET8-uV&ust=1726731091516000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMCkhuT-y4gDFQAAAAAdAAAAABAJ"\>
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
     <center>
