--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
     <h4>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flibraryuki.wordpress.com%2Fsejarah-perpustakaan-uki%2F&psig=AOvVaw3Wh-NG0L6K21tdaOET8-uV&ust=1726731091516000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMCkhuT-y4gDFQAAAAAdAAAAABAR"\>
+        <img src="https://www.google.com/imgres?q=gambar%20perpustakaan%20uki&imgurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2Fimg%2Fperpustakaan-hukum.jpg&imgrefurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2F&docid=G3r0gWzsx4ZFkM&tbnid=cIQhR9_DvFMzUM&vet=12ahUKEwijreja_MuIAxUaT2wGHTm6MG4QM3oECBoQAA..i&w=2110&h=1582&hcb=2&ved=2ahUKEwijreja_MuIAxUaT2wGHTm6MG4QM3oECBoQAA"\>
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
     <center>
