--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
     <center>
-        <iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/isBqAzO1vvo?si=8znipP0NV7uhW1UC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"  </iframe>
+        <iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/isBqAzO1vvo?si=8znipP0NV7uhW1UC" title="YouTube video player"></iframe>"  </iframe>
                     </iframe>
     
                 </p>
