--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
     <h4>
-        <img src="https://www.google.com/imgres?q=perpustakaan%20univ%20uki&imgurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2Fimg%2Fperpustakaan-hukum.jpg&imgrefurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2F&docid=G3r0gWzsx4ZFkM&tbnid=cIQhR9_DvFMzUM&vet=12ahUKEwjBxtuekMyIAxV5e2wGHb_9LHYQM3oECE0QAA..i&w=2110&h=1582&hcb=2&ved=2ahUKEwjBxtuekMyIAxV5e2wGHb_9LHYQM3oECE0QAA"\>
+        <img src="https://www.google.com/imgres?q=perpustakaan%20univ%20uki&imgurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2Fimg%2Fperpustakaan-pusat-cawang.jpg&imgrefurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2F&docid=G3r0gWzsx4ZFkM&tbnid=GgpDVZcjt7Z4yM&vet=12ahUKEwjBxtuekMyIAxV5e2wGHb_9LHYQM3oECBgQAA..i&w=1519&h=1139&hcb=2&ved=2ahUKEwjBxtuekMyIAxV5e2wGHb_9LHYQM3oECBgQAA"\>
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
     <center>
