--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
     <h4>
-        <img src="https://www.google.com/imgres?q=perpustakaan%20univ%20uki&imgurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2Fimg%2Fperpustakaan-pusat-cawang.jpg&imgrefurl=https%3A%2F%2Fperpustakaan.uki.ac.id%2F&docid=G3r0gWzsx4ZFkM&tbnid=GgpDVZcjt7Z4yM&vet=12ahUKEwjBxtuekMyIAxV5e2wGHb_9LHYQM3oECBgQAA..i&w=1519&h=1139&hcb=2&ved=2ahUKEwjBxtuekMyIAxV5e2wGHb_9LHYQM3oECBgQAA"\>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TJX3PQ2C-Yg?si=XPW05EcrWaZ3uJwQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"         </iframe>
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
     <center>
