--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </p>
     <h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
     <h4>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fperpustakaan.uki.ac.id%2Fcorner-perpustakaan-202109289&psig=AOvVaw3oIPa3GO-73tBXhLnJSIPg&ust=1726736333960000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjgg4aazIgDFQAAAAAdAAAAABAE"/>
+        <img src="https://images.app.goo.gl/NDTYwgg3A8GSdKAV9"/>
     </h4>
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
