--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h1>Perpustakaan Wince Simarmata</h1>
     <h2>Welcome To Perpustakaan Wince Simarmata</h2>
     <p>
-        Perkenalkan, nama saya Wince Simarmata dengan 222201030. Ini adalah perpustakaan
+        Perkenalkan, nama saya Wince Simarmata dengan Nim 222201030. Ini adalah perpustakaan
         <i>homepage</i> <b>pertama</b> saya, karena saya baru belajar tentang cara membuat
         <b><i><a href="https://digilib.umbp.ac.id/">website perpustakaan Universitas Kristen Indonesia </a></i></b>.
     </p>
