--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
     
     <center>
-        <iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/isBqAzO1vvo?si=Cy8N-fVnsLeujZ8n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"</iframe>" > </iframe>
+        <iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="https://youtu.be/isBqAzO1vvo?si=H2hkZb8zJGicoZVA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"</iframe>" > </iframe>
                     </iframe>
     <p>
             <audio controls>
