--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Perpustakaan Wince Simarmata</h1>
