--- a/index.html
+++ b/index.html
@@ -52,7 +52,29 @@
                 <source src="music/Jun Munthe - Raphon Ho (Official Music Video).mp3" type="audio/mpeg">
             </audio>
         </p>
-                </p>
+    <h1>Fitur Utama HTML5</h1>
+        <article>
+    <section>
+        <h2>1. Semantik Lebih Baik</h2>
+        <p>Elemen semantik baru seperti <code>&lt;header&gt;</code>, <code>&lt;article&gt;</code>, <code>&lt;section&gt;</code>, dan <code>&lt;footer&gt;</code> membantu memberikan struktur jelas dan meningkatkan aksesibilitas.</p>
+        <h2>2. Media Bawaan</h2>
+        <p>Mendukung elemen multimedia <code>&lt;audio&gt;</code> dan <code>&lt;video&gt;</code> tanpa plugin eksternal, memudahkan integrasi audio dan video.</p>
+        <h2>3. Canvas dan SVG</h2>
+        <p>Elemen <code>&lt;canvas&gt;</code> untuk grafik dinamis dengan JavaScript, mendukung SVG untuk grafik vektor.</p>
+        <h2>4. Formulir Lebih Canggih</h2>
+        <p>Tipe input baru seperti <code>email</code>, <code>date</code>, dan <code>tel</code> meningkatkan validasi dan pengalaman pengguna.</p>
+        <h2>5. Penyimpanan Lokal</h2>
+        <p>Mendukung LocalStorage dan SessionStorage untuk penyimpanan data tanpa cookie atau database eksternal.</p>
+        <h2>6. API Geolokasi</h2>
+        <p>Mengakses lokasi geografis pengguna melalui API Geolocation, berguna untuk aplikasi berbasis lokasi.</p>
+        <h2>7. WebSockets dan Server-Sent Events</h2>
+        <p>Komunikasi dua arah real-time antara browser dan server.</p>
+        <h2>8. Responsif terhadap Perangkat Mobile</h2>
+        <p>Dirancang untuk fleksibilitas dan responsivitas di berbagai ukuran layar.</p>
+        <h2>9. Penggunaan Lebih Cepat dan Efisien</h2>
+        <p>Mengurangi ketergantungan pada plugin dan JavaScript tambahan, meningkatkan performa web.</p>
+    </section>
+</article>
     
         <h2>Formulir Pemesanan Buku</h2>
         <form>
