--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
         <p>Mengurangi ketergantungan pada plugin dan JavaScript tambahan, meningkatkan performa web.</p>
     </section>
 </article>
+        <h1>Fitur Utama CSS</h1>
+        <article>
+    <section>
+        <h2>1. Mengatur Tampilan</h2>
+        <p>CSS mengatur elemen visual seperti warna, font, dan ukuran teks.</p>
+        <h2>2. Membuat Tata Letak</h2>
+        <p>CSS memungkinkan pengaturan posisi dan grid elemen halaman.</p>
+        <h2>3. Responsive Design</h2>
+        <p>CSS menyesuaikan tampilan di berbagai perangkat.</p>
+        <h2>4. Meningkatkan Konsistensi</h2>
+        <p>Desain yang sama dapat diterapkan di banyak halaman.</p>
+        <h2>5. Memisahkan Konten dari Desain</h2>
+        <p>Memudahkan pengembangan dan pemeliharaan.</p>
+        <h2>6. Meningkatkan Performa</h2>
+        <p>Penggunaan CSS eksternal mempercepat pemuatan halaman.</p>
+    </section>
+</article>
     
         <h2>Formulir Pemesanan Buku</h2>
         <form>
