--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Perpustakaan Wince Simarmata</h1>
+    <h1 style="color: black;">Perpustakaan Wince Simarmata</h1>
     <h2>Welcome To Perpustakaan Wince Simarmata</h2>
     <p>
         Perkenalkan, nama saya Wince Simarmata dengan Nim 222201030. Ini adalah perpustakaan
