--- a/index.html
+++ b/index.html
@@ -69,19 +69,30 @@
     <i>homepage</i> <b>pertama</b> saya, karena saya baru belajar tentang cara membuat
     <b><i><a href="https://digilib.umbp.ac.id/">website perpustakaan Universitas Kristen Indonesia </a></i></b>.
 </p>
-<h3>Berikut ini adalah gambar dari gedung Perpustakaan Universitas Kristen Indonesia.</h3>
-<h4>
-    <img src="https://perpustakaan.uki.ac.id/img/perpustakaan-pusat-cawang.jpg"/>
-</h4>
-<p><i>Perpustakaan Universitas Kristen Indonesia</i></p>
+<div id="media" class="container">
+    <h2>Media Perpustakaan</h2>
 
-<center>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/isBqAzO1vvo?si=0S-HtAxKc5ATFG2C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>
-        <audio controls>
-            <source src="music/Jun Munthe - Raphon Ho (Official Music Video).mp3" type="audio/mpeg">
-        </audio>
-    </p>
+    <h3>Foto</h3>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="path/to/your/image1.jpg" class="img-responsive" alt="Deskripsi Foto 1">
+            <p>Deskripsi untuk Foto 1.</p>
+        </div>
+    </div>
+
+    <h3>Video</h3>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/your_video_id" allowfullscreen></iframe>
+    </div>
+    <p>Deskripsi untuk video ini.</p>
+
+    <h3>Audio</h3>
+    <audio controls>
+        <source src="path/to/your/audiofile.mp3" type="audio/mpeg">
+    </audio>
+    <p>Deskripsi untuk audio ini.</p>
+</div>
+
     <h1>Fitur Utama HTML5</h1>
     <article>
         <section>
