--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h3>Foto</h3>
     <div class="row">
         <div class="col-md-4">
-            <img src="path/to/your/image1.jpg" class="img-responsive" alt="Deskripsi Foto 1">
+            <img src="picture/Cuplikan layar 2024-10-05 230829.png" class="img-responsive" alt="Deskripsi Foto 1">
             <p>Deskripsi untuk Foto 1.</p>
         </div>
     </div>
@@ -84,7 +84,7 @@
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/your_video_id" allowfullscreen></iframe>
     </div>
-    <p>Deskripsi untuk video ini.</p>
+    <p>Perpustakaan UKI</p>
 
     <h3>Audio</h3>
     <audio controls>
