--- a/index.html
+++ b/index.html
@@ -6,53 +6,68 @@
     <title>Perpustakaan Wince Simarmata</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
-        body {
-            background-color: #f8f8f8;
+          body {
+            background-image: url("picture/19546.jpg");
+            background-size: cover;
+            color: #333;
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
         }
-        .navbar {
-            margin-bottom: 0;
 
-        .welcome-title {
-    font-size: 2.5rem; /* Ukuran font untuk judul */
-    margin-bottom: 20px; /* Jarak bawah */
-    color: #333; /* Warna teks */
-}
-
-.welcome-text {
-    font-size: 1.2rem; /* Ukuran font untuk teks */
-    line-height: 1.6; /* Jarak antar baris */
-    color: #555; /* Warna teks */
-}
-
-.welcome-link {
-    color: #007bff; /* Warna link */
-    text-decoration: none; /* Menghilangkan garis bawah */
-}
-
-.welcome-link:hover {
-    text-decoration: underline; /* Menambahkan garis bawah saat hover */
-}
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
         }
-        table {
-            margin-bottom: 50px;
-        }
-        table, th, td {
-            border: 1px solid white;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 10px;
+
+        h1, h2 {
+            color: #444;
             text-align: center;
         }
-        h1, h4, p {
+
+        h3 {
+            margin-top: 20px;
             text-align: center;
         }
-        h1 {
-            text-decoration: underline;
+
+        section {
+            margin-bottom: 30px;
         }
+
         footer {
-            margin-top: 50px;
+            margin-top: 20px;
             text-align: center;
+            font-weight: bold;
+        }
+
+        img {
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .media-section {
+            margin-top: 50px;
+        }
+
+        .audio-control {
+            width: 100%;
+            max-width: 500px;
+            margin: auto;
+        }
+
+        .nav > li > a {
+            padding: 15px 20px;
+        }
+
+        .navbar-brand {
+            font-weight: bold;
+            font-size: 24px;
         }
     </style>
     <link rel="stylesheet" href="style.css">
