--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-image: url("picture/18388.jpg");
+            background-image: url("picture/cracked-black-wooden-textured-background.jpg");
             background-size: cover;
             color: #333;
             font-family: 'Arial', sans-serif;
