--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-image: url("picture/white-geometrical-shapes-wallpaper.jpg);
+            background-image: url("picture/high-angle-view-pink-colored-cardboard-papers.jpg");
             background-size: cover;
             color: #333;
             font-family: 'Arial', sans-serif;
