--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
 
-  <div class="container-fluid" style="background-image: url('picture/antique-book-shelf-vintage-background.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
+  <div class="container-fluid" style="background-image: url('picture/book-shelves-dtcorative-colorful-icon-poster_1284-6714.avif'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
     <nav class="navbar navbar-default" style="background-color: white;">
         <div class="container-fluid">
             <div class="navbar-header">
