--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 </head>
 <body>
 
-  <div class="container-fluid" style="background-image: url('picture/book-shelves-dtcorative-colorful-icon-poster_1284-6714.avif'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
+ <div class="container-fluid" style="background-image: url('picture/realistic-books-shelf.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
     <nav class="navbar navbar-default" style="background-color: white;">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand text-dark" href="#">Perpustakaan UKI</a>
+                <a class="navbar-brand text-dark" href="#">
+                    <img src="path/to/logo.png" alt="Logo" style="height: 40px; margin-right: 10px;"> 
+                </a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a class="text-dark" href="#">Home</a></li>
@@ -97,6 +99,7 @@
         </div>
     </nav>
 </div>
+
 
   <div class="container text-center my-5">
     <h1 class="display-4 font-weight-bold text-primary">Perpustakaan Universitas Kristen Indonesia</h1>
