--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
 
- <div class="container-fluid" style="background-image: url('picture/realistic-books-shelf.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
+ <div class="container-fluid" style="background-image: url('picture/UKI_LOGO.svg.png'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
     <nav class="navbar navbar-default" style="background-color: white;">
         <div class="container-fluid">
             <div class="navbar-header">
