--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 </head>
 <body>
 
- <div class="container-fluid" style="background-image: url('picture/UKI_LOGO.svg.png'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
+ <div class="container-fluid" style="background-image: url('picture/realistic-books-shelf.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
     <nav class="navbar navbar-default" style="background-color: white;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand text-dark" href="#">
-                    <img src="path/to/logo.png" alt="Logo" style="height: 40px; margin-right: 10px;"> 
+                    <img src="picture/realistic-books-shelf.jpg" alt="Logo" style="height: 40px; margin-right: 10px;"> 
                 </a>
             </div>
             <ul class="nav navbar-nav">
