--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
 </head>
 <body>
 
- <div class="container-fluid" style="background-image: url('picture/realistic-books-shelf.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
+<div class="container-fluid" style="background-image: url('picture/realistic-books-shelf.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
     <nav class="navbar navbar-default" style="background-color: white;">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand text-dark" href="#">
-                    <img src="picture/realistic-books-shelf.jpg" alt="Logo" style="height: 40px; margin-right: 10px;"> 
+            <div class="navbar-header" style="display: flex; align-items: center;">
+                <a class="navbar-brand text-dark" href="#" style="display: flex; align-items: center;">
+                    <img src="path/to/logo.png" alt="Logo" style="height: 40px; margin-right: 10px;"> <!-- Sesuaikan path dan ukuran -->
+                    Perpustakaan UKI
                 </a>
             </div>
             <ul class="nav navbar-nav">
@@ -99,6 +100,7 @@
         </div>
     </nav>
 </div>
+
 
 
   <div class="container text-center my-5">
