--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         <div class="container-fluid">
             <div class="navbar-header" style="display: flex; align-items: center;">
                 <a class="navbar-brand text-dark" href="#" style="display: flex; align-items: center;">
-                    <img src="path/to/logo.png" alt="Logo" style="height: 40px; margin-right: 10px;"> <!-- Sesuaikan path dan ukuran -->
-                    Perpustakaan UKI
+                    <img src="picture/UKI_LOGO.svg.png" alt="Logo" style="height: 40px; margin-right: 10px;"> 
                 </a>
             </div>
             <ul class="nav navbar-nav">
