--- a/index.html
+++ b/index.html
@@ -68,6 +68,45 @@
         .navbar-brand {
             font-weight: bold;
             font-size: 24px;
+        } 
+
+        .book-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .book-item img {
+            width: 100px; 
+            height: 150px;
+            margin-right: 15px;
+            object-fit: cover;
+        }
+
+         .details-btn {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 15px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-left: auto; 
+        }
+
+        .details-btn:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px); 
+
+        #book-detail {
+            margin-top: 20px;
+            border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 5px;
+            background: #f9f9f9;
         }
           
     </style>
