--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <button class="details-btn" data-index="3">Detail</button>
         </li>
         <li class="book-item">
-            <img src="picture/download.jpeg" alt="Outliers">
+            <img src="picture/download.png" alt="Outliers">
             <span>"Outliers (Rahasia di balik kesuksesan)"</span>
             <button class="details-btn" data-index="4">Detail</button>
         </li>
