--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a class="text-dark" href="#">Home</a></li>
-                <li><a class="text-dark" href="#media">Media</a></li>
-                <li><a class="text-dark" href="#tabel-buku">Tabel Buku</a></li>
+                <li><a class="text-dark" href="media.html">Media</a></li>
+                <li><a class="text-dark" href="tabel-buku.html">Tabel Buku</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" data-toggle="modal" data-target="#html5Modal">Fitur Utama HTML5</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#welcomeModal">SELAMAT DATANG</a></li>
-                        <li><a href="#formulir">Formulir</a></li>
+                        <li><a href="formulir.html">Formulir</a></li>
+                        <li><a href="tabel-buku.html">Tabel Buku</a></li>
                     </ul>
                 </li>
             </ul>
