--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" data-toggle="modal" data-target="#welcomeModal">SELAMAT DATANG</a></li>
+                        <li><a href="selamat-datang.html">SELAMAT DATANG</a></li>
                         <li><a href="formulir.html">Formulir</a></li>
                         <li><a href="tabel-buku.html">Tabel Buku</a></li>
                     </ul>
@@ -109,26 +109,6 @@
     </div>
 </div>
 
-    <div class="modal fade" id="welcomeModal" tabindex="-1" role="dialog" aria-labelledby="welcomeModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="welcomeModalLabel">Selamat Datang</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Selamat datang di Perpustakaan UKI! Kami senang Anda di sini.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-    
 
     <footer>
         <p>&copy; 2024 Perpustakaan Wince Simarmata. All Rights Reserved.</p>
