--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                         <li><a href="selamat-datang.html">SELAMAT DATANG</a></li>
                         <li><a href="formulir.html">Formulir</a></li>
                         <li><a href="tabel-buku.html">Tabel Buku</a></li>
+                        <li><a href="pameran.html">Pameran Buku</a></li>
                     </ul>
                 </li>
             </ul>
