--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@
                 <li class="active"><a class="text-dark" href="#">Home</a></li>
                 <li><a class="text-dark" href="media.html">Media</a></li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Dropdown <span class="caret"></span></a>
+                    <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Lainnya <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="selamat-datang.html">SELAMAT DATANG</a></li>
                         <li><a href="formulir.html">Formulir</a></li>
                         <li><a href="tabel-buku.html">Tabel Buku</a></li>
                         <li><a href="pameran.html">Pameran Buku</a></li>
                     </ul>
+                <li class="dropdown">
+                    <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Modul <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="HTML-CSS.HTML">HTML&CSS</a></li>
+                        <li><a href="Modul 5.html">Javascript</a></li>
                 </li>
             </ul>
         </div>
