--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Modul <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="HTML-CSS.HTML">HTML&CSS</a></li>
-                        <li><a href="Modul 5.html">Javascript</a></li>
+                        <li><a href="html-css.html">HTML&CSS</a></li>
+                        <li><a href="modul-5.html">Javascript</a></li>
                 </li>
             </ul>
         </div>
