--- a/html-css.html
+++ b/html-css.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Wince Simarmata</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-image: url("picture/efa2c05b-5f7e-430f-a22e-867136c5e31e.jpg");
+            background-size: cover;
+            color: #333;
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+        }
 
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        h1, h2 {
+            color: #444;
+            text-align: center;
+        }
+
+        h3 {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Fitur Utama HTML5 dan CSS</h1>
+
+        <section>
+            <h2>Fitur Utama HTML5</h2>
+            <p><strong>1. Semantik Lebih Baik:</strong> Elemen semantik baru seperti <code>&lt;header&gt;</code>, <code>&lt;article&gt;</code>, <code>&lt;section&gt;</code>, dan <code>&lt;footer&gt;</code> membantu memberikan struktur jelas dan meningkatkan aksesibilitas.</p>
+            <p><strong>2. Media Bawaan:</strong> Mendukung elemen multimedia <code>&lt;audio&gt;</code> dan <code>&lt;video&gt;</code> tanpa plugin eksternal, memudahkan integrasi audio dan video.</p>
+            <p><strong>3. Canvas dan SVG:</strong> Elemen <code>&lt;canvas&gt;</code> untuk grafik dinamis dengan JavaScript, mendukung SVG untuk grafik vektor.</p>
+            <p><strong>4. Formulir Lebih Canggih:</strong> Tipe input baru seperti <code>email</code>, <code>date</code>, dan <code>tel</code> meningkatkan validasi dan pengalaman pengguna.</p>
+            <p><strong>5. Penyimpanan Lokal:</strong> Mendukung LocalStorage dan SessionStorage untuk penyimpanan data tanpa cookie atau database eksternal.</p>
+            <p><strong>6. API Geolokasi:</strong> Mengakses lokasi geografis pengguna melalui API Geolocation, berguna untuk aplikasi berbasis lokasi.</p>
+            <p><strong>7. WebSockets dan Server-Sent Events:</strong> Komunikasi dua arah real-time antara browser dan server.</p>
+            <p><strong>8. Responsif terhadap Perangkat Mobile:</strong> Dirancang untuk fleksibilitas dan responsivitas di berbagai ukuran layar.</p>
+            <p><strong>9. Penggunaan Lebih Cepat dan Efisien:</strong> Mengurangi ketergantungan pada plugin dan JavaScript tambahan, meningkatkan performa web.</p>
+        </section>
+
+        <section>
+            <h2>Fitur Utama CSS</h2>
+            <p><strong>1. Mengatur Tampilan:</strong> CSS mengatur elemen visual seperti warna, font, dan ukuran teks.</p>
+            <p><strong>2. Membuat Tata Letak:</strong> CSS memungkinkan pengaturan posisi dan grid elemen halaman.</p>
+            <p><strong>3. Responsive Design:</strong> CSS menyesuaikan tampilan di berbagai perangkat.</p>
+            <p><strong>4. Meningkatkan Konsistensi:</strong> Desain yang sama dapat diterapkan di banyak halaman.</p>
+            <p><strong>5. Memisahkan Konten dari Desain:</strong> Memudahkan pengembangan dan pemeliharaan.</p>
+            <p><strong>6. Meningkatkan Performa:</strong> Penggunaan CSS eksternal mempercepat pemuatan halaman.</p>
+        </section>
+    </div>
+
+    <footer>
+        &copy; 2024 Perpustakaan Wince Simarmata
+    </footer>
+</body>
+</html>
