--- a/modul-5.html
+++ b/modul-5.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html> 
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Wince Simarmata</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-image: url("picture/efa2c05b-5f7e-430f-a22e-867136c5e31e.jpg");
+            background-size: cover;
+            color: #333;
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        h1, h2 {
+            color: #444;
+            text-align: center;
+        }
+
+        h3 {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+
+        <section>
+            <h2>Cara Menampilkan Data dalam JavaScript</h2>
+            <p><strong>1. Menggunakan alert:</strong> Metode ini menampilkan pesan dalam kotak dialog yang muncul di atas halaman web. Ini sangat berguna untuk memberikan informasi cepat kepada pengguna.</p>
+            <p><strong>2. Menggunakan console.log:</strong> Metode ini mencetak pesan ke konsol pengembang, yang dapat diakses melalui alat pengembang di browser (biasanya dengan menekan F12). Pesan ini tidak terlihat oleh pengguna di halaman, tetapi sangat berguna untuk debugging.</p>
+            <p><strong>3. Menggunakan document.write:</strong> Metode ini menulis langsung ke dalam dokumen HTML, dan dapat digunakan untuk menambahkan konten ke halaman saat halaman dimuat.</p>
+        </section>
+    </div>
+
+    <footer>
+        &copy; 2024 Perpustakaan Wince Simarmata
+    </footer>
+</body>
+</html>
 
