--- a/media.html
+++ b/media.html
@@ -73,6 +73,7 @@
     </style>
 </head>
 <body>
+    <div id="navbar-placeholder"></div>
 
 <div class="container media-section my-5">
     <h1 id="media" class="text-center mb-4">Media</h1>
@@ -98,6 +99,14 @@
         </div>
     </section>
 </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <script>
+    $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+    });
+</script>
     
 </body>
 </html>
