--- a/selamat-datang.html
+++ b/selamat-datang.html
@@ -48,6 +48,7 @@
     </style>
 </head>
 <body>
+    <div id="navbar-placeholder"></div>
 
 <section> 
    <div>
@@ -61,6 +62,12 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+    $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+    });
+</script>
     
 </body>
 </html>
