--- a/tabel-buku.html
+++ b/tabel-buku.html
@@ -47,6 +47,8 @@
     </style>
 </head>
 <body>
+    <div id="navbar-placeholder"></div>
+    
     <h2 id="tabel-buku" class="text-center mt-5 mb-4">Tabel Bahan Buku</h2>
     <table class="table table-bordered table-striped">
         <thead>
@@ -116,6 +118,12 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+    $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+    });
+</script>
 
 </body>
 </html>
