--- a/pameran.html
+++ b/pameran.html
@@ -99,6 +99,7 @@
     </style>
 </head>
 <body> 
+    <div id="navbar-placeholder"></div>
 
     <div class="container">
         <h3>Pameran Buku</h3>
@@ -154,6 +155,9 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script>
+    $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+    });
         const bookDetails = [
             {
                 title: "10 Langkah Mencerdaskan Kota",
