--- a/modul-5.html
+++ b/modul-5.html
@@ -47,6 +47,8 @@
     </style>
 </head>
 <body>
+    <div id="navbar-placeholder"></div>
+    
     <div class="container">
 
         <section>
@@ -60,6 +62,15 @@
     <footer>
         &copy; 2024 Perpustakaan Wince Simarmata
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <script>
+    $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+    });
+</script>
+    
 </body>
 </html>
 
