--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </style>
 </head>
 <body>
+   <div id="navbar-placeholder"></div>
 
   <div class="container text-center my-5">
     <h1 class="display-4 font-weight-bold text-primary">Perpustakaan Universitas Kristen Indonesia</h1>
@@ -92,6 +93,12 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+    $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+    });
+</script>
     
 </body>
 </html>  
