--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
                         <li><a href="formulir.html">Formulir</a></li>
                         <li><a href="tabel-buku.html">Tabel Buku</a></li>
                         <li><a href="pameran.html">Pameran Buku</a></li>
-                         <li><a href="jquhtml">Buku</a></li>
+                         <li><a href="pencarian.html">Pencarian</a></li>
                     </ul>
                 <li class="dropdown">
                     <a class="dropdown-toggle text-dark" data-toggle="dropdown" href="#">Modul <span class="caret"></span></a>
